--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "es5-shim": "^4.0.3",
-    "jquery": "^2.1.1"
+    "highlight.js": "^8.9.1",
+    "jquery": "^2.1.1",
+    "marked": "^0.3.5",
+    "to-markdown": "^2.0.1"
   },
   "devDependencies": {
     "array.prototype.find": "^1.0.0",
